--- a/emacs/.emacs.d/configuration.org
+++ b/emacs/.emacs.d/configuration.org
@@ -1,5 +1,5 @@
 #+title: Emacs Configuration
-#+PROPERTY: header-args :tangle init.el :exports code
+#+property: header-args :tangle init.el :exports code
 
 * Preamble
 There are a bunch of people I've shamelessly stolen from. The ideas and pieces
@@ -128,13 +128,74 @@ Example:
 * Configure Emacs defaults
 All kinds of Emacs things that just don't sit right with me.
 
-** Set theme
+** Theme
+  
 #+begin_src emacs-lisp
-(setq custom-theme-directory (my-emacs-path "themes/"))
-(if (package-installed-p 'autothemer)
-    (load-theme 'weatherwax t))
+(use-package autothemer)
 #+end_src
 
+#+begin_src emacs-lisp
+(use-package dracula-theme
+  :init
+  (setq dracula-enlarge-headings nil
+	dracula-height-title-1 1.0
+	dracula-height-title-2 1.0
+	dracula-height-title-3 1.0
+	dracula-height-doc-title 1.0))
+#+end_src
+
+#+begin_src emacs-lisp
+(use-package nord-theme
+  :defer t)
+#+end_src
+
+#+begin_src emacs-lisp
+(use-package gruvbox-theme
+  :defer t)
+#+end_src
+
+#+begin_src emacs-lisp
+(use-package solarized-theme
+  :defer t
+  :config (setq solarized-scale-org-headlines nil
+		solarized-use-variable-pitch nil
+		solarized-height-plus-1 1
+		solarized-height-plus-2 1
+		solarized-height-plus-3 1
+		solarized-height-plus-4 1
+		solarized-high-contrast-mode-line t
+		solarized-scale-org-headlines nil
+		solarized-scale-outline-headlines nil
+		solarized-use-less-bold t
+		solarized-use-more-italic nil))
+#+end_src
+
+Add some custom themes to the mix and make sure =rainbow-mode= is available.
+
+#+begin_src emacs-lisp
+
+(defun my-disable-all-themes ()
+  (dolist (theme custom-enabled-themes)
+    (disable-theme theme)))
+
+(defun my-load-theme (theme)
+  "Disable all loaded themes and load THEME. Also sets certain face attributes I like to use."
+  (interactive
+   (list (intern (completing-read "Load custom theme: "
+				  (mapcar 'symbol-name
+					  (custom-available-themes))))))
+  (unless (custom-theme-name-valid-p theme)
+    (error "Invalid theme name `%s'" theme))
+  (progn
+    (my-disable-all-themes)
+    (load-theme theme t)
+    ))
+#+end_src
+
+#+begin_src emacs-lisp
+(setq custom-theme-directory (my-emacs-path "themes/"))
+(my-load-theme 'weatherwax)
+#+end_src
 ** Garbage collection
 Thanks, Norman Walsh!
 
@@ -472,11 +533,12 @@ versions.
   (use-package smex))
 #+end_src
 
-*** TODO =ivy-bibtex=
+*** ivy-bibtex
 
 #+begin_src emacs-lisp
 (use-package ivy-bibtex
-  :commands (ivy-bibtex)
+  :general
+  (tex-mode-map "C-x [" 'ivy-bibtex)
   :config
   (setq ivy-re-builders-alist
 	'((ivy-bibtex . ivy--regex-ignore-order)
@@ -487,8 +549,7 @@ versions.
 	bibtex-completion-pdf-field "file")
   (setq bibtex-completion-pdf-open-function
 	(lambda (fpath)
-	  (call-process "zathura" nil 0 nil fpath)))
-  (general-def "C-x [" 'ivy-bibtex))
+	  (call-process "zathura" nil 0 nil fpath))))
 #+end_src
 
 ** Company
@@ -496,10 +557,11 @@ The de facto standard text completion framework for Emacs.
 
 #+begin_src emacs-lisp
 (use-package company
-  :config
-  (general-imap company-mode-map
-    "C-x C-o" 'company-complete
-    "C-x C-f" 'company-files))
+  :general
+  ('insert company-mode-map
+	   "C-x C-o" 'company-complete
+	   "C-x C-f" 'company-files)
+  :config (company-mode))
 #+end_src
 
 * Compile
@@ -1083,55 +1145,6 @@ stuff that I seldom need to use.
   #+end_src
 
 
-* Theme
-
-#+begin_src emacs-lisp
-(use-package autothemer)
-#+end_src
-
-#+begin_src emacs-lisp
-(use-package nord-theme
-  :defer t)
-#+end_src
-
-#+begin_src emacs-lisp
-(use-package solarized-theme
-  :defer t
-  :config (setq solarized-scale-org-headlines nil
-		solarized-use-variable-pitch nil
-		solarized-height-plus-1 1
-		solarized-height-plus-2 1
-		solarized-height-plus-3 1
-		solarized-height-plus-4 1
-		solarized-high-contrast-mode-line t
-		solarized-scale-org-headlines nil
-		solarized-scale-outline-headlines nil
-		solarized-use-less-bold t
-		solarized-use-more-italic nil))
-#+end_src
-
-Add some custom themes to the mix and make sure =rainbow-mode= is available.
-
-#+begin_src emacs-lisp
-
-(defun my-disable-all-themes ()
-  (dolist (theme custom-enabled-themes)
-    (disable-theme theme)))
-
-(defun my-load-theme (theme)
-  "Disable all loaded themes and load THEME. Also sets certain face attributes I like to use."
-  (interactive
-   (list (intern (completing-read "Load custom theme: "
-				  (mapcar 'symbol-name
-					  (custom-available-themes))))))
-  (unless (custom-theme-name-valid-p theme)
-    (error "Invalid theme name `%s'" theme))
-  (progn
-    (my-disable-all-themes)
-    (load-theme theme t)
-    ))
-#+end_src
-
 * Triage
 
 #+begin_src emacs-lisp
@@ -1244,4 +1257,6 @@ I like auto-filling, 80 columns and spell-checking, thank you very much.
 	ispell-extra-args '("--sug-mode=ultra")))
 
 #+end_src
+
+
 
