--- a/emacs/.emacs.d/configuration.org
+++ b/emacs/.emacs.d/configuration.org
@@ -435,6 +435,9 @@ Vimmy keys and feel, for us vimfolk.
     "L" 'evil-end-of-line
     "H" 'evil-first-non-blank-of-visual-line
     "?" 'swiper
+    "g E" 'eval-buffer
+    "g e" 'eval-last-sexp
+    "g C-e" 'eval-defun
     "C-u" 'evil-scroll-up
     "C-w 1" 'delete-other-windows
     "C-w x" 'kill-this-buffer
@@ -797,18 +800,17 @@ I use org to write many of my latex files, including longer documents.
 #+end_src
 
 * Major modes
-** Vterm
+** TODO Vterm
 Vterm is the nicest terminal emulator for Emacs I've found so far. But it needs
 module support, which requires building emacs with =--with-modules=.
 
 #+begin_src emacs-lisp
 (use-package vterm
-  :commands (vterm)
+  :general ("<f4>" 'vterm)
   :config
   (setq vterm-shell "/usr/bin/fish"
 	vterm-kill-buffer-on-exit t
-	vterm-copy-exclude-prompt t)
-  (general-nmap "<f4>" 'vterm))
+	vterm-copy-exclude-prompt t))
 #+end_src
 
 #+begin_src emacs-lisp
@@ -847,32 +849,33 @@ Trackin' them finances.
 ** TeX
 #+begin_src emacs-lisp
 (use-package tex
-:mode ("\\.tex\\'" . tex-mode)
-:config
-(setq TeX-auto-save t)
-(setq TeX-parse-self t)
-(setq TeX-master nil)
-(setq TeX-PDF-mode t))
+  :ensure nil
+  :mode ("\\.tex\\'" . tex-mode)
+  :config
+  (setq TeX-auto-save t)
+  (setq TeX-parse-self t)
+  (setq TeX-master nil)
+  (setq TeX-PDF-mode t))
 
 (use-package auctex-latexmk
-:after tex
-:config
-(auctex-latexmk-setup)
-(setq auctex-latexmk-inherit-TeX-PDF-mode t))
+  :after tex
+  :config
+  (auctex-latexmk-setup)
+  (setq auctex-latexmk-inherit-TeX-PDF-mode t))
 
 (defun my-bibtex-hook ()
-"My bibtex hook."
-(progn
-(setq comment-start "%")))
+  "My bibtex hook."
+  (progn
+    (setq comment-start "%")))
 
 (add-hook 'bibtex-mode-hook 'my-bibtex-hook)
 
 (setq-default TeX-auto-save t
-TeX-parse-self t
-TeX-PDF-mode t
-TeX-auto-local (my-emacs-path "auctex-auto"))
+	      TeX-parse-self t
+	      TeX-PDF-mode t
+	      TeX-auto-local (my-emacs-path "auctex-auto"))
 (setq bibtex-dialect 'biblatex)
-#+end_src emacs-lisp
+#+end_src
 
 ** Dired
 
@@ -935,7 +938,7 @@ For exploring new keys and remembering the lesser used ones.
 
 #+begin_src emacs-lisp
 (use-package magit
-  :commands (magit-status)
+  :commands (magit-status magit-list-repositories)
   :config
   (my-c-def "d" 'magit-list-repositories)
   (advice-add 'magit-list-repositories :before #'my-repolist-refresh))
